# neuroscope

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile.in  README.md  config-neuroscope.h.cmake  config.h  config.h.in  config.status  configure  configure.in  configure.in.in  depends  libtool  neuroscope.kdevelop  neuroscope.kdevelop.pcs  neuroscope.kdevses  postinst
.travis/: deploy.sh  install.sh  script.sh
admin/CVS/: Entries  Tag
cmake/modules/: FindCBSDK.cmake
cpack/: description
doc/: CMakeLists.txt  Makefile.am  Makefile.in
doc-pak/: AUTHORS
doc-pak/doc/en/: Makefile.in
doc-pak/doc/en/Images/: Makefile.am  Makefile.in
doc/en/: CMakeLists.txt  Makefile.am  index.docbook  kde-include-common.xsl  kde-include-man.xsl
doc/en/customization/dtd/: kdex.dtd
doc/en/entities/: contributor.entities
doc/en/html/: a1717.html  a1907.html  c1012.html  c1059.html  c1111.html  c1219.html  c1697.html  c1881.html  c40.html  c41.html  c48.html  c50.html  c835.html  c916.html  index.html  x1005.html  x108.html  x1154.html  x118.html  x1200.html  x1204.html  x1211.html  x1280.html  x1342.html  x1349.html  x1391.html  x1421.html  x1459.html  x1488.html  x1498.html  x1570.html  x1572.html  x160.html  x1609.html  x1634.html  x1645.html  x1654.html  x1725.html  x1739.html  x1748.html  (+23 more)
doc/en/xsl/: all-l10n.xml
neuroscope/: neuroscope.pro
neuroscope-api/html/: annotated.html  array_8h-source.html  baseframe_8h-source.html  channelcolors_8h-source.html  channelgroupview_8h-source.html  channeliconview_8h-source.html  channelpalette_8h-source.html  classArray-members.html  classArray.html  classArray__coll__graph.dot  classArray__coll__graph.md5  classArray__inherit__graph.dot  classArray__inherit__graph.map  classArray__inherit__graph.md5  classBaseFrame-members.html  classBaseFrame.html  classBaseFrame__coll__graph.dot  classBaseFrame__coll__graph.map  classBaseFrame__coll__graph.md5  classBaseFrame__inherit__graph.dot  classBaseFrame__inherit__graph.map  classBaseFrame__inherit__graph.md5  classChannelColors-members.html  classChannelColors.html  classChannelDescription-members.html  classChannelDescription.html  classChannelGroupView-members.html  classChannelGroupView.html  classChannelIconView-members.html  classChannelIconView.html  classChannelPalette-members.html  classChannelPalette.html  classChannelPalette_1_1ChannelIconItem-members.html  classChannelPalette_1_1ChannelIconItem.html  classChannelPalette__coll__graph.dot  classChannelPalette__coll__graph.map  classChannelPalette__coll__graph.md5  classClusterColors-members.html  classClusterColors.html  classClusterColors__coll__graph.md5  (+354 more)
package/: depends  description-pak  mkpackage  mktarball  notes.txt  store  version
po/: CMakeLists.txt  Makefile.in
src/: CMakeLists.txt  Makefile.am  Makefile.in  ReadHDF5.cpp  alttracesprovider.h  array.h  baseframe.cpp  baseframe.h  blackrock.h  cerebusclustersprovider.cpp  cerebusclustersprovider.h  cerebuseventsprovider.cpp  cerebuseventsprovider.h  cerebustraceprovider.cpp  cerebustraceprovider.h  channelcolors.cpp  channelcolors.h  channelgroupview.cpp  channelgroupview.h  channeliconview.cpp  channeliconview.h  channelmimedata.cpp  channelmimedata.h  channelpalette.cpp  channelpalette.h  clustercolors.cpp  clustercolors.h  clusterproperties.cpp  clusterproperties.h  clusterpropertieslayout.cpp  clusterpropertieslayout.h  clusterpropertieslayout.ui  clustersprovider.cpp  clustersprovider.h  config-neuroscope.h  configuration.cpp  configuration.h  data-file.desktop  dataprovider.cpp  dataprovider.h  (+111 more)
src/cursors/: CMakeLists.txt  Makefile.am  Makefile.in
src/icons/: CMakeLists.txt  Makefile.am  Makefile.in
templates/: h
